force-app/main/default/objects/POMapping__mdt/POMapping__mdt.object-meta.xml
<CustomObject>
    <label>PO Mapping</label>
    <pluralLabel>PO Mappings</pluralLabel>
</CustomObject>