force-app/main/default/objects/POMapping__mdt/fields/AreaCode__c.field-meta.xml
<CustomField>
    <fullName>AreaCode__c</fullName>
    <label>AreaCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>