force-app/main/default/objects/POMapping__mdt/fields/GenericPO__c.field-meta.xml
<CustomField>
    <fullName>GenericPO__c</fullName>
    <label>GenericPO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>